# pyvoxelis

./: .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README-EN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: CI.yml
pyvoxelis/: __init__.py  __init__.pyi
pyvoxelis/core/: __init__.pyi
pyvoxelis/examples/: dynamic_sphere.py  quick_start.py  sphere.py
pyvoxelis/examples/utils/: mesh.py
pyvoxelis/interner/: __init__.pyi
pyvoxelis/io/: __init__.pyi
pyvoxelis/spatial/: __init__.pyi
pyvoxelis/utils/: __init__.pyi
pyvoxelis/world/: __init__.pyi
src/: lib.rs
src/voxelis_bindings/: mod.rs
src/voxelis_bindings/core/: batch.rs  block_id.rs  lod.rs  max_depth.rs  mod.rs  traversal_depth.rs  voxel.rs
src/voxelis_bindings/interner/: consts.rs  hash.rs  macros.rs  mod.rs  stats.rs
src/voxelis_bindings/io/: consts.rs  export.rs  flags.rs  import.rs  mod.rs  obj_reader.rs  varints.rs
src/voxelis_bindings/spatial/: aabb2d.rs  mod.rs  voxops.rs  voxtree.rs
src/voxelis_bindings/utils/: common.rs  mod.rs
src/voxelis_bindings/world/: mod.rs  voxchunk.rs  voxmodel.rs  voxworld.rs
